provisioning/apps/overlays/k3d-dev/whoami/ingress-k3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-k3d-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: keycloak-operator-traefik-forward-auth@kubernetescrd
    # ingress.kubernetes.io/auth-type: forward
    # ingress.kubernetes.io/auth-url: http://traefik-forward-auth-svc.keycloak-realm-operator.svc.cluster.local/
    # ingress.kubernetes.io/auth-response-headers: X-Forwarded-User

spec:
  ingressClassName: traefik
  rules:
  - host: whoami.k3d-dev.lessingstrasse.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80

  tls:
  - hosts:
    - whoami.k3d-dev.lessingstrasse.org
    secretName: whoami.k3d-dev.lessingstrasse.org
